fixed overflow x

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
 
-html,
-body {
+html {
   /* font-family: "Oxygen Mono", monospace; */
   font-family: "Quicksand", sans-serif;
   background-color: #212230;
   color: #ffffff;
 
   width: 100vw;
-  overflow-x: hidden;
+  overflow-y: scroll;
   margin: 0;
 
   scroll-behavior: smooth;
@@ -16,6 +15,11 @@ body {
 
   -webkit-font-smoothing: antialiased;
   display: inline-table;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
 }
 
 header {
